# CPPMatrixLib

./: .gitignore  .gitignore.txt  CMakeLists.txt  LU.hpp  README.md  README_SOC.md  main.cpp  main2.cpp  matrix.hpp  matrix_array.hpp  matrix_utility.hpp  matrix_utility_array.hpp  modint.hpp  modint_utility.hpp  my_LU.cpp  my_gauss_elim.cpp  my_gauss_elim.hpp  polynomial.hpp  primes_lib.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
Tests/: CMakeLists.txt  MatrixTests.cpp  MatrixTests.hpp  PolyTests.cpp  PolyTests.hpp
examples/primes/: main.cpp
features/: LU.hpp  README.md  main.cpp  matrix_array.hpp
include/: CMakeLists.txt  primes_utility.h
include/Matrix/: matrix.hpp
include/Modint/: main_modint.cpp  modint.hpp
include/matrix/: matrix_utility.hpp  strassen.hpp
include/modint/: modint.hpp
include/polynomial/: polynomial.hpp  polynomial_utility.hpp
lib/: matrix.hpp
lib/googletest/: CMakeLists.txt
random stuff/CP Problems/: 102644A.cpp  102644B.cpp  102644C.cpp  102644D.cpp  102644E.cpp  102644EAlt.cpp  102644F.cpp  102644G.cpp  102644H.cpp  102644I.cpp  1101G.cpp  1178C.cpp  1248C.cpp  1279D.cpp  1281C.cpp  300C.cpp  717A.cpp  895C.cpp  895CPrac.cpp  935D.cpp  959F.cpp  ABCDEF.cpp  AGGRCOW.cpp  CARR.cpp  COINS.cpp  DP-A.cpp  DP-B.cpp  DP-C.cpp  DP-D.cpp  DP-E.cpp  DP-EAgain.cpp  DP-F.cpp  DP-G.cpp  DP-H.cpp  DP-I.cpp  DP-J.cpp  DP-K.cpp  DP-L.cpp  DP-M.cpp  DP-N.cpp  (+20 more)
random stuff/ProjectEuler/: 258.cpp
src/: CMakeLists.txt  CODE_OF_CONDUCT.md  Sample-Test1.sln  Sample-Test1.vcxproj  main,gtest.cpp  main.cpp  main2.cpp  main_matrix.cpp  matrix.hpp  matrix_utility.hpp  modint.hpp  modint_utility.hpp  prime_tests.h  primes_utility.h  test.cpp
src/debug/: Sample-Test1.exe.recipe  Sample-Test1.ilk  Sample-Test1.vcxproj.FileListAbsolute.txt
src/debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate
test/: CMakeLists.txt
test/matrix/: CMakeLists.txt  MatrixTests.cpp
test/modint/: CMakeLists.txt  ModintTests.cpp
test/polynomial/: CMakeLists.txt  polynomial_test.cpp  polynomial_test.hpp
tests/: CMakeLists.txt  Formula-test.cpp  main  test.cpp
tests/matrix/: CMakeLists.txt  test1.cpp
tests/matrix_tests/: CMakeLists.txt  matrix_tests.cpp  matrix_tests.hpp
tests/polynomial/: CMakeLists.txt  test1.cpp
tests/polynomial_tests/: CMakeLists.txt  polynomial_tests.cpp  polynomial_tests.hpp
tests/test/: CMakeLists.txt  MatrixTests.cpp  ModintTest.cpp
week1/: main.cpp  matrix.hpp  readme.md  strassen.hpp
